--- a/components/src/core/drawer/drawer-subheader/drawer-subheader.component.scss
+++ b/components/src/core/drawer/drawer-subheader/drawer-subheader.component.scss
@@ -1,5 +1,6 @@
 .pxb-drawer-subheader {
     box-sizing: border-box;
+    overflow: hidden;
     &.pxb-drawer-subheader-closed {
         visibility: hidden;
     }
